unittest/bin/src/rl/tests/positive/baseline1.js
WScript.Echo("test baseline");
WScript.Echo("2nd line");
