unittest/bin/src/rl/tests/negative/baseline_whitespace.js
WScript.Echo(" file with some whitespace   ");

